# magnesis

./: .gitignore  README.md  pyproject.toml
magnesis/: __init__.py  constants.py  core.py  dataset.py  model.py  schemas.py  validator.py
notebooks/: compare_rnn_architectures.ipynb  example_usage.ipynb  inference.ipynb  make_dataset.ipynb  train.ipynb  train2.ipynb  train3.ipynb  train4_lite_model copy.ipynb
notebooks/train/: train2.ipynb  train_28_05_2026.ipynb
notebooks/weights/: GN_X_scaler.joblib  GN_y_scaler.joblib
service/: README.md  pyproject.toml
service/src/geomagnesis/: config.py  main.py
service/src/geomagnesis/infrastructure/migrations/: env.py
service/src/geomagnesis/presentations/http_api/routers/: frontend.py
service/src/geomagnesis/presentations/http_api/templates/: index.html
