[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnesis"
version = "0.1.1"
description = "Библиотека для прогнозирование и анализа магнитной активности земли на основе данных "
readme = "README.md"
authors = [
    {name = "Egor P.Zorin", email = "zorin-ep@mail.ru"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/neZorinEgor/GeomagneticNet"
"Repository" = "https://github.com/neZorinEgor/GeomagneticNet.git"
"Bug Reports" = "https://github.com/neZorinEgor/GeomagneticNet/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["magnesis*"]
