[project]
name = "Geomagnesis"
version = "0.1.0"
description = "Приложение для мониторинга предсказаний нейронной сети прогноза геомагнитной активности"
authors = [
    {name = "Зорин Егор Петрович",email = "zorin-ep@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "setuptools (>=82.0.1,<83.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)"
]

[build-system]
requires = ["setuptools (>=82.0.1,<83.0.0)"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
